--- a/report/text/usingEthernet.tex
+++ b/report/text/usingEthernet.tex
@@ -1,14 +1,10 @@
-\documentclass{report}
-\usepackage{listings}
-\usepackage{hyperref}
-\begin{document}
 \section{Using the Ethernet Shield.}
 The Ethernet shield is the primary component in accessing the API as it allows for the Arduino to access the web as a client.
-We use the Ethernet shield along with a JSON parser in order to make HTML requests on the web site that contains the system API.
+We use the Ethernet shield along with a JSON parser in order to make HTML requests on the web site that contains the system API and decode its responce.
 
 The Ethernet Shield comes with an MAC address printed on the side which is used to automatically obtain an IP Address.
 This along with the target server is established as global variables as seen in \autoref{EthStart} along with the Method call in \verb|Setup()| that establishes a connection with the LAN. All supplied from the Arduino Library \verb|Ethernet.h|.
-\begin{lstlisting}[label=EthStart, caption=The Method Calls used to establish and maintain a connection.]
+\begin{lstlisting}[frame=single, label=EthStart, caption=The Method Calls used to establish and maintain a connection.]
 //The Mac Address declared.
 byte mac[] = { 0x90, 0xA2, 0xDA, 0x0E, 0xC5, 0x94 };
 
@@ -39,7 +35,7 @@ The process is almost identical in either case and can be divided into two parts
 As seen in \autoref{pageConnect} the Device ID and the Tag ID is connected in a char array to form the url which complies with the action that is being performed. 
 The in return the Ethernet Shield receives the HTML Page, and in \autoref{pageDecipher} the Arduino reads this information one byte at the time where all but the JSON string is stripped and stored in a Char Pointer.
 When there is no more information to be received from the website, which is seen in  the connection is closed and the JSON string is parsed for the relevant information on whether or not the user was successful \autoref{pageJSON}.
-\begin{lstlisting}[label=pageConnect, caption=Connecting to the Server and creating an HTML request.]
+\begin{lstlisting}[frame=single, label=pageConnect, caption=Connecting to the Server and creating an HTML request.]
 void turnOn(void)
 {
   if(client.connect(server, 80))
@@ -58,40 +54,37 @@ void turnOn(void)
     Serial.println(F("Message Sent"));
 \end{lstlisting}
 
-\begin{lstlisting}[label=pageDecipher, caption=Removing all but the important information from the website.]
+\begin{lstlisting}[frame=single, label=pageDecipher, caption=Removing all but the important information from the website.]
 while (client.connected())
 {
   //Builds the JSON string from the data passed by the website.
-	while(client.available()) 
-	{ 
-		buff = client.read();   //Bytes are passed through the Ethernet Shield with client.Read();
-		if(buff == '{')        //The JSON string starts with '{' and stops with '}'.
-		{
-			toggle = !toggle;
-			*(on+i) = buff;
-			i++;
-		}
-		else if(buff == '}')
-		{
-			toggle = !toggle;
-			*(on+i) = buff;
-			i++;
-		}
-		else if(toggle)
-		{
-			*(on+i) = buff;
-			i++;
-		}     
-
-	}
+  while(client.available()) 
+  { 
+    buff = client.read();   //Bytes are passed through the Ethernet Shield with client.Read();
+    if(buff == '{')        //The JSON string starts with '{' and stops with '}'.
+    {
+      toggle = !toggle;
+      *(on+i) = buff;
+      i++;
+    }
+    else if(buff == '}')
+    {
+      toggle = !toggle;
+      *(on+i) = buff;
+      i++;
+    }
+    else if(toggle)
+    {
+      *(on+i) = buff;
+      i++;
+    }
+  }
 }
 client.stop();
 \end{lstlisting}
 
-\begin{lstlisting}[label=pageJSON, caption=The JSON Code Getting a value with a Token.]
+\begin{lstlisting}[frame=single, label=pageJSON, caption=The JSON Code Getting a value with a Token.]
 aJsonObject* json = aJson.parse(on);
 aJsonObject* statJson = aJson.getObjectItem(json,"status");
 char * stat = statJson->valuestring;
 \end{lstlisting}
-
-\end{document}
