--- a/report/text/api.tex
+++ b/report/text/api.tex
@@ -8,7 +8,7 @@ The API started with one clear goal, to be the middleman between the controllers
 
 
 \section{Implementation}
-The API has been implemented on top of the Slim routing framework and PHP. The reason for this framework is that it makes it easier to make an API easy and quick, while also making it easy to add additional endpoints. The communication between controllers and the API is done using HTTP and JSON. JSON was picked because of its almost universally support and its small overhead. This means that the communication is easy to implement, and easy to port to additional platforms if necessary. Calling the API is as simple as navigating to a website. Parameters to the API is done using custom GET messages. An example of a call to get status could be \texttt{http://example.com/api/api.php/turnOn/123/234} where \texttt{example.com} is the domain where the API is hosted, \texttt{123} is the controller id and \texttt{234} is the users tag id. An overview of the available calls and their parameters can be seen in \autoref{tbl:apicalls}.
+The API has been implemented on top of the Slim routing framework and PHP. The reason for this framework is that it makes it easier to make an API easy and quick, while also making it easy to add additional endpoints. The communication between controllers and the API is done using HTTP and JSON. JSON has been chosen because of its almost universally support and its small overhead. This means that the communication is easy to implement, and easy to port to additional platforms if necessary. Calling the API is as simple as navigating to a website. Parameters to the API is done using custom GET messages. An example of a call to get status could be \texttt{http://example.com/api/api.php/turnOn/123/234} where \texttt{example.com} is the domain where the API is hosted, \texttt{123} is the controller id and \texttt{234} is the users tag id. An overview of the available calls and their parameters can be seen in \autoref{tbl:apicalls}.
 
 \begin{table}[!h]
 \begin{tabular}{| l | l | l |}
