--- a/report/text/websiteImplementationAndDesign.tex
+++ b/report/text/websiteImplementationAndDesign.tex
@@ -1,24 +1,24 @@
 \chapter{Admin Web Interface}
 This chapter goes into details about the design and implementation of the website used to administrate Media-Online Management (MOM).
 
-\section{Design}
+\section{Design}\fixme{Her er sikkert en masse we som kan undværes}
 %Interface Design
 %What you can do from the website, and how
 As mentioned in the overview, see subsection \vref{section:momswebsite}, we know what the website is required to do for the system.
 These requirements made the basis for deciding what pages should be created and what each page's functionality should be. During the designing of the website we aimed to fit all relevant information into each page.\\
-All pages was first designed on the blackboards, where we would discover inconsistencies, new navigation paths and learn about how concepts such as rules should be implemented.\\
+All pages have been designed on the blackboards, where we discovered inconsistencies, new navigation paths and learn about how concepts such as rules should be implemented.\\
 Next is a short overview of what pages were designed and their purposes.\\
 \\
 \textbf{Dashboard} is used to get a quick overview of relevant data. The overview is customizable so that each parent can decide what information is most relevant for them.\\
 \\
-\textbf{Devices} is used to get an overview of what controllers and tags is registered with one's MOM system. It also is the only way to navigate to the Add Tag/Controller and Details Tag/Controller pages.\\
+\textbf{Devices} is used to get an overview of which controllers and tags is registered within their MOM system. It also is the only way to navigate to the Add Tag/Controller and Details Tag/Controller pages.\\
 From this page it is also possible to deactivate a tag, meaning the owner of that tag, can no longer log in with it.\\
 \\
 \textbf{Devices - Details Controller} is used to display, delete and change information about a controller. A user can only access controllers that is registered to his system.\\
 \\
-\textbf{Devices - Details Tag} is used to display, delte and change information about a tag. A user can only access tags that is registered to his system.\\
+\textbf{Devices - Details Tag} is used to display, delete and change information about a tag. A user can only access tags that is registered to his system.\\
 \\
-\textbf{Devices - Add Controller} is used to add controllers to one's system. In order to add a controller one must add a unique key found on the controller, this is then checked towards a database of available keys.\\
+\textbf{Devices - Add Controller} is used to add controllers to the user's system. In order to add a controller the user must add a unique key found on the controller, this is then checked towards a database of available keys.\\
 However we have not currently implemented this way of validation, but it would be the right way to go in order to commercialize the system and ensure security for our users.\\
 \\
 \textbf{Devices - Add Tag} is like Add Controller, except with tags. Also in order to register a tag, a user must be dedicated to this tag. The one registering a tag, will be meet by a list of current users in the system. This means that in order to apply a tag, one must first create a user, then register a tag.\\
@@ -32,7 +32,7 @@ However we have not currently implemented this way of validation, but it would b
 \textbf{Users - Chores} is used to get an overview of available chores, and for easy rewarding of already created chores. When a chore is done, the parent should go to this site, and simply select a child and press a button to give them the assigned reward of the chore.\\
 Chores will also have a subsite for creating chores.\\
 \\
-\textbf{Users - Rules} is where parents can get an overview of rules and create them for their system. We have taken great care to help users in creating rules, by making a step by step procedure. Starting with making the user choose what sort of action they want to achieve and thereafter choose the sort of condition they want to set, since actions only match certain conditions. This should limit some of the confusion about the rules. For more information about actions and conditions see subsection \vref{subsubsection:action}.\\
+\textbf{Users - Rules} is where parents can get an overview of rules and create them for their system. We have taken great care to help users in creating rules, by making a step by step procedure. Starting with making the user choose what sort of action they want to achieve and thereafter choose the sort of condition they want to set, since actions only match certain conditions. This should limit some of the confusion about the rules. For more information about rules, actions and conditions see subsection \vref{sec:rule}.\\
 \\
 \textbf{Users - Permissions} is designed for an easier way to think of rules, in relation to what devices which child is allowed to use in which time slots of the days.\\
 We decided to create this permissions page, because permissions is an essential part of even the smallest of systems. This tool gives the parents an easy way to limit their child’s usage, by deciding devices can not be turned on after a certain time.\\
