lav ny permission

--- a/report/text/newGeneralDesignConcepts.tex
+++ b/report/text/newGeneralDesignConcepts.tex
@@ -10,24 +10,26 @@ An example on a house chore could be to take out the garbage, then the chore in 
 One disadvantage about the chore design is that the parent needs to use the website to award the child with points for doing a chore. We would have liked to automate it further, but to limit the scope of the project this would be future work.  
 
 \section{Permission}
-Permissions in this system is a time period in which the child user is allowed to use a specific media. Permission is included in MOM to give parents an easy way of controlling which time periods during the day the media can be used by the child. This can help the parents to get the children to bed in time since they cannot use the medias unless the parent allows it. It would especially be useful if the child has medias in his room such that the parents do not need to check whether the media is turned off or not. 
 
-The permission consist of:
-\begin{itemize}
-	\item a name of the permission
-	\item a representation for the time period, which would need a from time and a to time. 
-	\item a representation of days where the permission applies, which can be all days of the week or just some of them.
-	\item a representation of when it should be repeated, which can be:
-		\begin{itemize}
-		\item weekly
-		\item every second week
-		\item every third week
-		\item first in a month
-		\item last in a month
-		\end{itemize}
-\end{itemize}
 
-An example of a permission is Peter is allowed to use the TV each weekendy in the time period 17:00 to 19:00. The permission in the system would then have a time 17:00 (FromTime), a time 19:00 (ToTime), the day representation 'Saturday, Sunday', and it's repeated weekly.
+%Permissions in this system is a time period in which the child user is allowed to use a specific media. Permission is included in MOM to give parents an easy way of controlling which time periods during the day the media can be used by the child. This can help the parents to get the children to bed in time since they cannot use the medias unless the parent allows it. It would especially be useful if the child has medias in his room such that the parents do not need to check whether the media is turned off or not. 
+
+%The permission consist of:
+%\begin{itemize}
+	%\item a name of the permission
+	%\item a representation for the time period, which would need a from time and a to time. 
+	%\item a representation of days where the permission applies, which can be all days of the week or just some of them.
+	%\item a representation of when it should be repeated, which can be:
+		%\begin{itemize}
+		%\item weekly
+		%\item every second week
+		%\item every third week
+		%\item first in a month
+		%\item last in a month
+		%\end{itemize}
+%\end{itemize}
+%
+%An example of a permission is Peter is allowed to use the TV each weekendy in the time period 17:00 to 19:00. The permission in the system would then have a time 17:00 (FromTime), a time 19:00 (ToTime), the day representation 'Saturday, Sunday', and it's repeated weekly.
 
 
 \section{Rule}
