--- a/report/text/websiteImplementationAndDesign.tex
+++ b/report/text/websiteImplementationAndDesign.tex
@@ -1,7 +1,7 @@
 \chapter{Admin Web Interface}
 This chapter goes into details about the design and implementation of the website used to administrate Media-Online Management (MOM).
 
-\section{Design}\fixme{Her er sikkert en masse we som kan undværes}
+\section{Design}\fixme{Her er sikkert en masse 'we' som kan undværes}
 %Interface Design
 %What you can do from the website, and how
 As mentioned in the overview, see subsection \vref{section:momswebsite}, we know what the website is required to do for the system.
