--- a/report/text/systemOverviewDesign.tex
+++ b/report/text/systemOverviewDesign.tex
@@ -24,7 +24,7 @@ Using the relay to control the power to media, using the scanner to identify use
 %How do we facilitate concepts as rules, permission and chores without parents interaction.
 Rules, permissions and chores are complicated concepts to explain which will be explained in further detail in chapter \ref{chapter:concepts}. The short version however is:\\
 \textbf{Rules} is a combination of an action and a condition. Where actions could for example be to allow the usage of a device, give points\footnote{Points is the currency we intend to use in the system to pay for media usage.} to user or block user. And a condition could for example be a period of time or a repeating event such as every Monday in every week.\\
-\textbf{Permissions} is a subtype of rules. But we like to differentiate on rules not being necessary for the usage of the system, where permissions is. Permissions is only used to tell the system the normal allowed usage of media and rules is there to overwrite these permissions in special cases, or if the user wants to customize the system.\\
+\textbf{Permissions} is a subtype of rules. But we like to differentiate on rules not being necessary for the usage of the system \fixme{this is not true}, where permissions is. Permissions is only used to tell the system the normal allowed usage of media and rules is there to overwrite these permissions in special cases, or if the user wants to customize the system.\\
 \textbf{Chores} is intended as an idea to get the children to do physical activities. Parents create chores and designate a set of points that can be earned by doing this chore.\\
 \\
 By now there already is a lot of information in the system. We have users, rules, permissions, chores, points, timestamps and time periods, and if the system is to be extended to learn anything from the users behavior it should also include logs.\\
