--- a/report/text/newGeneralDesignConcepts.tex
+++ b/report/text/newGeneralDesignConcepts.tex
@@ -10,7 +10,7 @@ An example on a house chore could be to take out the garbage, then the chore in 
 One disadvantage about the chore design is that the parent needs to use the website to award the child with points for doing a chore. We would have liked to automate it further, but to limit the scope of the project this would be future work.  
 
 \section{Permission}
-Permission in this system is whether a user have access to the media. Permissions can also be expressed in a rule, but it is easier to make and understand a permission. This also the main reason for differentiate the two.
+Permission in this system is whether a user have access to the media. Permissions can also be expressed in a rule, but it is easier to make and understand a permission. This also the main reason for differentiate the two for the user. 
 
 A permission need a name and a controller. When a user then is connected a permission it would mean this user has permission to uses the media which is connected to this controller. An example could be that Peter has permission to use the TV. 
 
